--- a/to-do/src/components/todo/styles.module.css
+++ b/to-do/src/components/todo/styles.module.css
@@ -1,9 +1,24 @@
-.pageContainer{
+.boxContainer{
     display: flex;
     flex-direction: column;
     height:37.5rem;
-    justify-content: center;
-    align-items: center;
-    background-color: blueviolet;
+    justify-content: flex-start;
     width:67rem;
+    align-items: center;
+    border-radius: 8px;
+    background-color: aquamarine;
+    padding: 2rem 8.625rem ;
+    
+    
 }
+.boxContainer header{
+    color: var(--gray-800);
+    
+}
+.optionsBox {
+    display:flex;
+    width:100%; 
+    height: 64px;
+    justify-content: space-between;
+}
+
