--- a/to-do/src/components/todo/styles.module.css
+++ b/to-do/src/components/todo/styles.module.css
@@ -6,13 +6,14 @@
     width:67rem;
     align-items: center;
     border-radius: 8px;
-    background-color: aquamarine;
+    
     padding: 2rem 8.625rem ;
     
     
 }
 .boxContainer header{
     color: var(--gray-800);
+    height: 8rem;
     
 }
 .optionsBox {
@@ -20,5 +21,52 @@
     width:100%; 
     height: 64px;
     justify-content: space-between;
+    
 }
 
+.optionsBox button{
+    width: 10rem;
+    height:3.4rem;
+    border-radius: 8px;
+    border: 0;
+    background-color: var(--purple-600);
+    color: var(--gray-100);
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.optionsBox button:hover{
+    cursor: pointer;
+    background-color: var(--purple-400);
+    transition:0.1s;
+}
+
+.optionsBox select{
+    width: 12.5rem;
+    height:3.4rem;
+    border-radius: 8px;
+    border: 0;
+    background-color: var(--gray-700);
+    padding: 8px;
+    font-weight: bold;
+    color: var(--gray-800);
+    font-size:1.2rem;
+    
+}
+.optionsBox option{
+    height: 3.4rem;
+    font-size:1.2rem;
+    padding:18px;
+
+}
+
+.tasksBox {
+    background-color: var(--gray-200);
+    width:100%;
+    margin-top: 1rem;
+    border-radius: 8px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
