--- a/to-do/src/components/task/styles.module.css
+++ b/to-do/src/components/task/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: white;
     border-radius: 5px;
-    padding: 0 1rem;
+    padding: 1rem 1rem;
     justify-content: space-between;
     align-items: center;
 
@@ -12,28 +12,42 @@
     display: flex;
 }
 
+
 .taskContainer span{
     display: flex;
     flex-direction: column;
-    
+    justify-content: center;
     padding-left: 1rem;
+}
+
+
+.taskContainer span * {
+   display: flex;
+   align-items: center;
 }
 
 .buttons{
     display: flex;
+    align-items: center;
     gap:1rem;
     padding: 8px 0;
+    margin: 1rem 0; 
     
 }
 
 .buttons > button {
     border: 0px;
-    width:2.75rem;
+    padding: 0;
+    margin: 0;
+    width:3rem;
+    height: 3rem;
+    border-radius:8px;
 }
 .buttons >button:nth-child(1)::before{
+    content: '';
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23000000' viewBox='0 0 256 256'%3E%3Cpath d='M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z'%3E%3C/path%3E%3C/svg%3E");
-        
-    background-size: cover; /* Ajusta o tamanho da imagem para cobrir todo o botão */
+    background-repeat: no-repeat;    
+    background-size: 25px; /* Ajusta o tamanho da imagem para cobrir todo o botão */
     background-position: center; /* Centraliza a imagem dentro do botão */
     padding: 10px 20px; /* Ajuste o preenchimento conforme necessário */
     border: none; /* Remove a borda do botão */
