--- a/to-do/src/components/todo/styles.module.css
+++ b/to-do/src/components/todo/styles.module.css
@@ -1,13 +1,12 @@
 .boxContainer{
     display: flex;
     flex-direction: column;
-    height:37.5rem;
     justify-content: flex-start;
     width:67rem;
     align-items: center;
     border-radius: 8px;
     
-    padding: 2rem 8.625rem ;
+    padding: 2rem 8.625rem 4rem;
     
     
 }
@@ -69,4 +68,5 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    box-sizing: padding-box;
 }
