--- a/to-do/src/components/task/styles.module.css
+++ b/to-do/src/components/task/styles.module.css
@@ -35,6 +35,7 @@
     
 }
 
+
 .buttons > button {
     border: 0px;
     padding: 0;
@@ -56,4 +57,35 @@
     cursor: pointer; /* Altera o cursor para um ponteiro quando hover */
     /* Outros estilos conforme necessário */
     
+}
+
+.spanCheck {
+    position: relative;
+}
+
+.spanCheck input {
+    position: absolute;
+    opacity: 0;
+    z-index: 1;
+    height: 24px;
+    width: 24px;
+}
+
+.spanCheck::before {
+    content: '';
+    width: 24px;
+    height: 24px;
+    border-radius: 8px;
+    border: 1px solid var(--purple-600);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    z-index: 0;
+}
+
+.spanCheck input:checked + .spanCheck::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-position: center;
 }
