--- a/to-do/src/components/task/styles.module.css
+++ b/to-do/src/components/task/styles.module.css
@@ -60,12 +60,20 @@
 }
 
 .spanCheck {
+
     position: relative;
+    display: inline-block;
+    gap: 1rem; /* Garante que o container tenha o tamanho do conteúdo */
 }
+
+.spanCheck span{
+    margin-left: 20px;
+}
+
 
 .spanCheck input {
     position: absolute;
-    opacity: 0;
+    opacity: 30;
     z-index: 1;
     height: 24px;
     width: 24px;
@@ -84,8 +92,13 @@
     z-index: 0;
 }
 
-.spanCheck input:checked + .spanCheck::before {
+/* Estiliza o pseudo-elemento quando o input está marcado */
+.spanCheck::before + #checkbox:checked   {
     background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position: center;
+    opacity: 0;
+    width: 40px;
+    
 }
+
